--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,16 +1,12 @@
 {
-	"main": "dist/_worker.js/index.js",
-	"name": "rocha-brindes-astro",
+  "name": "rochabrindes",
+  "pages_build_output_dir": "dist",
   "compatibility_date": "2025-11-20",
   "compatibility_flags": [
     "nodejs_compat",
     "global_fetch_strictly_public"
   ],
-	"assets": {
-		"binding": "ASSETS",
-		"directory": "./dist"
-	},
-	"observability": {
+  "observability": {
     "enabled": true
   }
 }
