--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.0.0",
     "astro": "^5.15.9",
     "firebase": "^10.7.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.300.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
