--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
-# generated types
 .astro/
 .claude/
-# dependencies
+.wrangler/
 node_modules/
-
-# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-
-# environment variables
 .env
 .env.production
-
-# macOS-specific files
 .DS_Store
-
-# jetbrains setting folder
 .idea/
 dist/
+package-lock.json
